maze.wallfindfollow.WallFindFollowMaze.scala.error
Erreur de compilation :
WallFindFollowMaze:6: error: not found: value keepHandOnSideWall
  keepHandOnSideWall()
  ^