maze.wallfindfollow.WallFindFollowMaze.scala.code
override def run() {
  while(!estFaceMur) {
    gauche()
  }
  droite()
  keepHandOnSideWall()
}